--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
       integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="styles/style.css">
   </head>
   <!-- Header section-->
   <header>
     <!-- navigation bar start  -->
     <nav class="navbar navbar-expand-lg">
-      <div class="container">
+      <div class="container px-5">
         <a class="navbar-brand text-dark fw-semibold fs-2 pe-5 me-5" href="#"
           >Digital Grarge</a
         >
@@ -38,11 +39,6 @@
             <li class="nav-item">
               <a class="nav-link pe-3" aria-current="page" href="#"
                 >Online courses</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link pe-3" aria-current="page" href="#"
-                >Offline courses</a
               >
             </li>
             <li class="nav-item">
@@ -73,6 +69,50 @@
     </nav>
     <!-- navigation bar end  -->
   </header>
+  <main class="container">
+    <!-- Top Carousel header  -->
+    <section class="container my-5">
+      <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="images/cover/cover-1.png" class="d-block  custom-carousel-img" alt="">
+            <div class="carousel-caption w-50   position-absolute top-50 start-50 translate-middle">
+              <h1 class="custom-heading">Learn the skills of the future</h1>
+              <p class="custom-text">Accelerate your career or business with an online digital skills course in everything from marketing to coding and beyond.</p>
+              <button type="button" class="btn btn-primary btn-lg">Get Started</button>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="images/cover/cover-2.jpg" class="d-block custom-carousel-img" alt="">
+            <div class="carousel-caption w-50   position-absolute top-50 start-50 translate-middle">
+              <h1 class="custom-heading">Do things you never thought possible?</h1>
+              <p class="custom-text">Discover courses in topics designed to help expand your career, business and horizons and to upgrade your skills for a new digital world.</p>
+              <button type="button" class="btn btn-primary btn-lg">Get Started</button>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="images/cover/cover-3.jpg" class="d-block  custom-carousel-img" alt="">
+            <div class="carousel-caption w-50   position-absolute top-50 start-50 translate-middle">
+              <h1 class="custom-heading">Getting Ready to Learn
+              </h1>
+              <p class="mb-3 custom-text">Research suggests that perhaps the most important skill you need to learn effectively is what is called a ‘growth mindset’: the belief that you can learn and develop new skills.</p>
+              <button type="button" class="btn btn-primary">Get Started</button>
+            </div>
+          </div>
+        </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+      </div>
+    </section>
+    <!-- Top Carousel header  -->
+  </main>
   <body>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
