--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   </header>
   <main class="container">
     <!-- Top Carousel header  -->
-    <section class="container my-5">
+    <section class="my-5">
       <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
@@ -111,7 +111,117 @@
         </div>
       </div>
     </section>
-    <!-- Top Carousel header  -->
+
+    <!-- start our Course section  -->
+    <section class="mb-5">
+      <div class="container w-50 text-center">
+        <h1 class="mb-4">Discover Our Popular Courses</h1>
+        <p class="mb-5">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-12 col-lg-6">
+            <div class="card mb-3">
+              <div class="row g-0">
+                <div class="col-md-4">
+                  <img src="images/course/course-1.png" class="img-fluid rounded-start custom-course-img" alt="">
+                </div>
+                <div class="col-md-8">
+                  <div class="card-body">
+                    <h5 class="card-title">Fundamental Of UI/UX Design</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card.</p>
+                    <p class="card-text"><small class="text-primary fw-semibold">Price : 20$</small></p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-lg-6">
+            <div class="card mb-3">
+              <div class="row g-0">
+                <div class="col-md-4">
+                  <img src="images/course/course-2.png" class="img-fluid rounded-start custom-course-img" alt="">
+                </div>
+                <div class="col-md-8">
+                  <div class="card-body">
+                    <h5 class="card-title">Javascript Basic to advanced</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card.</p>
+                    <p class="card-text"><small class="text-primary fw-semibold">Price : 20$</small></p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-lg-6">
+            <div class="card mb-3">
+              <div class="row g-0">
+                <div class="col-md-4">
+                  <img src="images/course/course-3.png" class="img-fluid rounded-start custom-course-img" alt="">
+                </div>
+                <div class="col-md-8">
+                  <div class="card-body">
+                    <h5 class="card-title">Fullstack Web Development</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card.</p>
+                    <p class="card-text"><small class="text-primary fw-semibold">Price : 20$</small></p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-lg-6">
+            <div class="card mb-3">
+              <div class="row g-0">
+                <div class="col-md-4">
+                  <img src="images/course/course-4.png" class="img-fluid rounded-start custom-course-img" alt="">
+                </div>
+                <div class="col-md-8">
+                  <div class="card-body">
+                    <h5 class="card-title">Digital Marketing</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card.</p>
+                    <p class="card-text"><small class="text-primary fw-semibold">Price : 20$</small></p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-lg-6">
+            <div class="card mb-3">
+              <div class="row g-0">
+                <div class="col-md-4">
+                  <img src="images/course/course-5.png" class="img-fluid rounded-start custom-course-img" alt="">
+                </div>
+                <div class="col-md-8">
+                  <div class="card-body">
+                    <h5 class="card-title">Photography Basic Rules</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card.</p>
+                    <p class="card-text"><small class="text-primary fw-semibold">Price : 20$</small></p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-lg-6">
+            <div class="card mb-3" style="max-width: 540px;">
+              <div class="row g-0">
+                <div class="col-md-4">
+                  <img src="images/course/course-6.png" class="img-fluid rounded-start custom-course-img" alt="">
+                </div>
+                <div class="col-md-8">
+                  <div class="card-body">
+                    <h5 class="card-title">Motion Graphics</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card.</p>
+                    <p class="card-text"><small class="text-primary fw-semibold">Price : 20$</small></p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="text-center pt-5">
+        <button type="button" class="btn btn-lg btn-primary">See More Courses</button>
+      </div>
+    </section>
   </main>
   <body>
     <script
