--- a/index.html
+++ b/index.html
@@ -222,6 +222,42 @@
         <button type="button" class="btn btn-lg btn-primary">See More Courses</button>
       </div>
     </section>
+    <!-- start optional section-1  -->
+    <section class="mb-5">
+      <div class="card mb-3">
+        <div class="row g-0">
+          <div class="col-md-6">
+            <img src="images/working.png" class="img-fluid rounded-start" alt="...">
+          </div>
+          <div class="col-md-6">
+            <div class="card-body">
+                  <h2 class="card-title mb-4">Explore The elearning Institute</h2>
+                  <p class="card-text mb-4">
+                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure.
+                    Anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined.
+                  </p>
+                  <div class="d-flex">
+                    <div class="me-5">
+                      <h2 class="fw-bold">3.2k</h2>
+                      <p>Online Course</p>
+                  </div>
+                  <div class="me-5">
+                      <h2 class="fw-bold">600+</h2>
+                      <p>Expert member</p>
+                  </div>
+                  <div class="mb-3">
+                      <h2 class="fw-bold">1k+</h2>
+                      <p>Rating & Review</p>
+                  </div>
+                </div>
+          
+                <button type="button" class="btn btn-primary">Read More</button>
+            </div>
+          </div>
+        </div>
+      </div>
+      </div>
+    </section>
   </main>
   <body>
     <script
