Added Bonus Sectio-1

--- a/index.html
+++ b/index.html
@@ -258,6 +258,56 @@
       </div>
       </div>
     </section>
+    <!-- Bonus Section-1  -->
+    <section class="mb-5">
+      <div class="d-flex justify-content-around align-items-center rounded bg-primary p-5">
+        <div class="text-light w-50">
+          <h3 class="mb-3">Ready to join?</h3>
+          <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+        </div>
+        <div>
+          <!-- Button trigger modal -->
+          <button type="button" class="btn btn-lg btn-light text-primary" data-bs-toggle="modal" data-bs-target="#myModal">
+           Register Now
+          </button>
+
+          <!-- Modal -->
+          <div class="modal fade" id="myModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h4 class="modal-title" id="exampleModalLabel">
+                    Please Registration
+                  </h4>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                  <!-- Register form  -->
+                  <div class="mb-3 d-flex">
+                    <input type="name" class="form-control me-3" placeholder="First Name">
+                    <input type="name" class="form-control" placeholder="Last Name">
+                  </div>
+                  <div class="mb-3">
+                    <input type="email" class="form-control" placeholder="Email">
+                  </div>
+                  <div class="mb-3">
+                    <input type="password" class="form-control" placeholder="New Password">
+                  </div>
+                  <div class="mb-3">
+                    <input type="password" class="form-control" placeholder="Confirm Password">
+                  </div>
+                  <!-- Register form end -->
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                  <button type="button" class="btn btn-primary">Sing in</button>
+                </div>
+             </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
   <body>
     <script
