--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Digital learning courses</title>
+    <script src="https://kit.fontawesome.com/ce95b51972.js" crossorigin="anonymous"></script>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -306,6 +307,127 @@
             </div>
           </div>
         </div>
+      </div>
+    </section>
+    <!-- optional section-2  -->
+    <section class="mb-5">
+      <div class="w-50 mb-5">
+      <h1 class="mb-3">Meet Our Successfull Students</h1>
+      <p>
+        It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
+      </p>
+      </div>
+      <div class="row">
+        <div class="col-12 col-md-6 col-lg-3">
+          <div class="card">
+            <img src="images/student/student-1.png" class="card-img-fluid" alt="">
+            <div class="card-body">
+              <h5 class="card-title">Awlad Hossain</h5>
+              <p class="card-text"><small class="text-muted">UIUX Designer</small>
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-3">
+          <div class="card">
+            <img src="images/student/student-2.png" class="card-img-fluid" alt="">
+            <div class="card-body">
+              <h5 class="card-title">Jannatul Islam</h5>
+              <p class="card-text"><small class="text-muted">Motion Design</small>
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-3">
+          <div class="card">
+            <img src="images/student/student-3.png" class="card-img-fluid" alt="">
+            <div class="card-body">
+              <h5 class="card-title">Imran Hossain</h5>
+              <p class="card-text">
+                <small class="text-muted">Graphic Designer</small>
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-3 mb-5">
+          <div class="card">
+            <img src="images/student/student-4.png" class="card-img-fluid" alt="">
+            <div class="card-body">
+              <h5 class="card-title">Nishi Akter</h5>
+              <p class="card-text">
+                <small class="text-muted">Web Developer</small>
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="text-center">
+          <button type="button" class="btn btn-lg btn-primary">View All</button>
+        </div>
+      </div>
+    </section>
+    <!-- Optional Section-3  -->
+    <section class="mb-5">
+      <div class="container w-50 text-center mb-5">
+        <h2 class="mb-3">Some Students Feedback</h2>
+        <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+      </div>
+      <div class="row position-relative">
+        <i class="fa-solid fa-angle-right fs-1 bg-info text-center rounded-circle text-light position-absolute position-absolute top-50 start-100 translate-middle" style="width: 40px; height: 40px; z-index: 1;"></i>
+        <i class="fa-solid fa-angle-left fs-1 bg-info text-center rounded-circle text-light position-absolute position-absolute top-50 start-0 opacity-25 translate-middle" style="width: 40px; height: 40px; z-index: 1;"></i>
+        <div class="col-sm-6">
+          <div class="card">
+            <div class="card-body p-3">
+              <div class="d-flex justify-content-between">
+                <img src="images/comma.png" alt="">
+                <div class="text-warning">
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-regular fa-star-half-stroke"></i>
+                </div>
+              </div>
+              <p class="card-text my-4">
+                There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem.
+              </p>
+              <div class="d-flex align-items-center">
+                <img src="images/student/student-5.png" style="width: 60px;" alt="">
+                <div class="ms-3">
+                  <h6>Awlad Hossain</h6>
+                    <small class="text-muted">UI Designer</small>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6">
+          <div class="card">
+            <div class="card-body p-3">
+              <div class="d-flex justify-content-between">
+                <img src="images/comma.png" alt="">
+                <div class="text-warning">
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-regular fa-star-half-stroke"></i>
+                </div>
+              </div>
+              <p class="card-text my-4">
+                There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem.
+              </p>
+              <div class="d-flex align-items-center">
+                <img src="images/student/student-5.png" style="width: 60px;" alt="">
+                <div class="ms-3">
+                  <h6>Awlad Hossain</h6>
+                    <small class="text-muted">UI Designer</small>
+                </div>
+              </div>
+            </div>
+          </div>
+      </div>
+      <div class="my-5 d-lg-none d-sm-block d-md-block text-center">
+        <button type="button" class="btn btn-lg btn-primary">View All</button>
       </div>
     </section>
   </main>
