added accordion section

--- a/index.html
+++ b/index.html
@@ -430,6 +430,60 @@
         <button type="button" class="btn btn-lg btn-primary">View All</button>
       </div>
     </section>
+    <!-- Accordion section  -->
+    <section class="mb-5">
+      <div class="justify-content-center d-flex">
+        <div class="w-75">
+          <div class="text-center mb-5">
+            <h2 class="mb-3">Frequently Asked Questions</h2>
+            <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+          </div>
+          <!-- Accordion -->
+          <div class="accordion accordion-flush" id="accordionFlushExample">
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="flush-headingOne">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                  ফ্লেক্স-বক্স এবং গ্রিড এর মধ্যে পার্থক্য কী?
+                </button>
+              </h2>
+              <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                <div class="accordion-body">ফ্লেক্স বক্স এবং গ্রিড কে নিয়ে চিন্তা করলে এক ধাক্কায় যে বিষয়টা মাথায় আসে সেটা হলো-  ফ্লেক্স যেকোনো একদিক বরাবর কাজ করতে পারে , হয় সেটা কলাম অথবা সারি বরাবর।   গ্রিড – একই সাথে দুই দিক বরাবর কাজ করতে পারে।  অর্থাৎ কন্টেইনারের ভিতরের চারটি বক্সকে একই সাথে কলাম ও সারি বরাবরা অবস্থানে রাখতে পারে । যেটা ফ্লেক্স বক্স দিয়ে করতে দুইটা কন্টেইনারের প্রয়োজন হয় কিন্তু উভয়কে খুব সহজে  রেসপন্সিভ করা যায়।</div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="flush-headingTwo">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                  বুটস্ট্র্যাপ ও টেইলউইন্ড সিএসএস এর মধ্যে পার্থক্য লিখ।
+                </button>
+              </h2>
+              <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+                <div class="accordion-body">এই দুইটা ফ্রেমওয়ার্ক তারা তাদের অবস্থান থেকে ভিন্ন আঙ্গিকে আমাদের মাঝে আসে। যেখানে বুটস্ট্রাপ তাদের নিজস্ব থিম, প্রিকম্পিলিড সি এস এস ইউজার ইন্টারফেজ এবং কিছু ইউটিলিটিস ব্যবহার করে একটি ওয়েবের লেআউট প্রদান করে। আর অপর দিকে টেইলউইন্ড- থিম বিহিন, ইউ আই কম্পোনেন্ট বিহিন নরমাল লেআউট প্রদান করে  এবং তাদের ইউটিলিটিস ব্যবহার করে একটি ওয়েবের লেআউট তৈরি করা যায়। </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="flush-headingThree">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                  সিএসএস বক্স মডেল কাকে বলে?
+                </button>
+              </h2>
+              <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+                <div class="accordion-body">সিএসএস বক্স মডেল হল এইচটিএমএল এলিমেন্টের চারপাশের বর্ডার, মার্জিন, প্যাডিং এবং এলিমেন্ট বা কন্টেন্ট এর সম্মিলিত অবস্থা। বক্স মডেল প্রপার্টিগুলো কোন কন্টেন্ট এর চারপাশে বর্ডার, মার্জিন, প্যাডিং বা আউটলাইন নির্ধারণ করে।</div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="flush-headingThree">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                  সিমান্টিক ট্যাগ বলতে কি বুঝায়?
+                </button>
+              </h2>
+              <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+                <div class="accordion-body">সিমান্টিক- যে ট্যাগ তাদের নিজস্ব অর্থ বহন করে থাকে।  সিমান্টিক ট্যাগ ব্যবহারের ফলে ব্রাউজার সহজেই বুঝতে পারে যে উক্ত ট্যাগটি এইচটিএমএলের একটি নির্দিষ্ট উদ্দেশ্য ব্যবহার করা হয়েছে । যেমন আমি যদি &#60;article	&#62; ট্যাগটি ব্যবহার করি তাহলে এর দ্বারা একটি ডকুমেন্টের আর্টিকেল গুলোকেই শুধু উল্লেখ  করা হবে ।আবার nav ট্যাগ ব্যবহার করলে এটি ব্রাউজারকে এর ভেতরের ইলিমেন্টসকে নেভিগেশন বারে প্রদর্শনের নির্দেশ প্রদান করে ।</div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
   <body>
     <script
