--- a/index.html
+++ b/index.html
@@ -484,6 +484,20 @@
         </div>
       </div>
     </section>
+    <!-- Bonus section-2  -->
+    <section class="mb-5">
+        <div class="d-none d-lg-block">
+          <h2 class="container w-50 text-center mb-4">Trusted by over 800+ companies</h2>
+        <div class="d-flex justify-content-center">
+          <img src="images/company/company-1.png" class="m-4" alt="">
+          <img src="images/company/company-2.png" class="m-4" alt="">
+          <img src="images/company/company-3.png" class="m-4" alt="">
+          <img src="images/company/company-4.png" class="m-4" alt="">
+          <img src="images/company/company-5.png"  class="m-4"alt="">
+          <img src="images/company/company-6.png" class="m-4" alt="">
+        </div>
+        </div>
+    </section>
   </main>
   <body>
     <script
