--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
             </div>
           </div>
           <div class="col-12 col-lg-6">
-            <div class="card mb-3" style="max-width: 540px;">
+            <div class="card mb-3">
               <div class="row g-0">
                 <div class="col-md-4">
                   <img src="images/course/course-6.png" class="img-fluid rounded-start custom-course-img" alt="">
@@ -499,6 +499,35 @@
         </div>
     </section>
   </main>
+
+  <!-- Footer section  -->
+  <footer class="container-fluid bg-dark">
+    <div class="d-flex justify-content-center
+       align-items-center text-center text-light">
+      <div class="p-5">
+        <h2 class="mb-4">Digital Grarge</h2>
+      <p class="m-1">Office 41, Zawaya Buildin, Ghala Muscat,</p>
+      <p class="m-1">Sultanate of Oman</p>
+        <p>Privacy Ploicy <span>|</span>Terms of use</p>
+        <div>
+          <ul class="d-flex justify-content-center">
+            <li class="list-group-item me-3 fs-4">
+              <a href="#" class="bg-secondary rounded-circle text-light d-block" style="width: 35px; height: 35px;"><i class="fa-brands fa-facebook"></i></a>
+            </li>
+            <li class="list-group-item me-3 fs-4">
+              <a href="#" class="bg-secondary rounded-circle text-light d-block" style="width: 35px; height: 35px;"><i class="fa-brands fa-square-twitter"></i></a>
+            </li>
+            <li class="list-group-item me-3 fs-4">
+              <a href="#" class="bg-secondary rounded-circle text-light d-block" style="width: 35px; height: 35px;"><i class="fa-brands fa-linkedin"></i></a>
+            </li>
+            <li class="list-group-item me-3 fs-4">
+              <a href="#" class="bg-secondary  rounded-circle text-light d-block" style="width: 35px; height: 35px;"><i class="fa-brands fa-tiktok"></i></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </footer>
   <body>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
