--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
             </li>
             <li class="nav-item">
               <a class="nav-link pe-3" aria-current="page" href="#"
-                >Online courses</a
+                >Online</a
               >
             </li>
             <li class="nav-item">
               <a class="nav-link pe-3" aria-current="page" href="#"
-                >Success Student</a
+                >Success</a
               >
             </li>
             <li class="nav-item">
@@ -86,7 +86,7 @@
           <div class="carousel-item">
             <img src="images/cover/cover-2.jpg" class="d-block custom-carousel-img" alt="">
             <div class="carousel-caption w-50   position-absolute top-50 start-50 translate-middle">
-              <h1 class="custom-heading">Do things you never thought possible?</h1>
+              <h1 class="custom-heading">Discover courses</h1>
               <p class="custom-text">Discover courses in topics designed to help expand your career, business and horizons and to upgrade your skills for a new digital world.</p>
               <button type="button" class="btn btn-primary btn-lg">Get Started</button>
             </div>
@@ -261,8 +261,9 @@
     </section>
     <!-- Bonus Section-1  -->
     <section class="mb-5">
-      <div class="d-flex justify-content-around align-items-center rounded bg-primary p-5">
-        <div class="text-light w-50">
+      <div class=" d-flex flex-column  flex-md-column flex-lg-row justify-content-around
+      align-items-center bg-primary p-5">
+        <div class="text-light text-lg-start text-md-center text-center w-50">
           <h3 class="mb-3">Ready to join?</h3>
           <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
         </div>
@@ -371,9 +372,7 @@
         <h2 class="mb-3">Some Students Feedback</h2>
         <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
       </div>
-      <div class="row position-relative">
-        <i class="fa-solid fa-angle-right fs-1 bg-info text-center rounded-circle text-light position-absolute position-absolute top-50 start-100 translate-middle" style="width: 40px; height: 40px; z-index: 1;"></i>
-        <i class="fa-solid fa-angle-left fs-1 bg-info text-center rounded-circle text-light position-absolute position-absolute top-50 start-0 opacity-25 translate-middle" style="width: 40px; height: 40px; z-index: 1;"></i>
+      <div class="row">
         <div class="col-sm-6">
           <div class="card">
             <div class="card-body p-3">
@@ -488,7 +487,7 @@
     <section class="mb-5">
         <div class="d-none d-lg-block">
           <h2 class="container w-50 text-center mb-4">Trusted by over 800+ companies</h2>
-        <div class="d-flex justify-content-center">
+        <div class="d-flex justify-content-center company-img">
           <img src="images/company/company-1.png" class="m-4" alt="">
           <img src="images/company/company-2.png" class="m-4" alt="">
           <img src="images/company/company-3.png" class="m-4" alt="">
